// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTabs Component Snapshots renders default state correctly: default-state 1`] = `
<div>
  <div
    class="sc-Qotzb OMzYM"
  >
    <div
      class="rt-TabsRoot"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="rt-BaseTabList rt-TabsList rt-r-size-2"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-«r0»-content-description"
          aria-selected="true"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-«r0»-trigger-description"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Description
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Description
          </span>
        </button>
        <button
          aria-controls="radix-«r0»-content-reviews"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«r0»-trigger-reviews"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              2
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              2
            </span>
          </span>
        </button>
        <button
          aria-controls="radix-«r0»-content-questions"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«r0»-trigger-questions"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              1
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              1
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="radix-«r0»-trigger-description"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="active"
        id="radix-«r0»-content-description"
        role="tabpanel"
        style="display: flex; flex-direction: column; gap: 32px; animation-duration: 0s;"
        tabindex="0"
      >
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            Origins
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          >
            Test origins content
          </p>
        </div>
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            How to cook
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          >
            Test cooking information
          </p>
        </div>
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            Full of Vitamins!
          </h3>
          <div
            style="overflow-x: auto;"
          >
            <table
              class="sc-dIMoHT dXpkLy"
            >
              <thead
                class="sc-iQQCXo LYtZC"
              >
                <tr>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    Vitamins
                  </th>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    Quantity
                  </th>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    % DV
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="sc-gDpztx ipNMIn"
                >
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    Vitamin C
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    89.2mg
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    99%
                  </td>
                </tr>
                <tr
                  class="sc-gDpztx ipNMIn"
                >
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    Vitamin K
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    102μg
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    85%
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-«r0»-trigger-reviews"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«r0»-content-reviews"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-«r0»-trigger-questions"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«r0»-content-questions"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`ProductTabs Component Snapshots renders different content states correctly: empty-content 1`] = `
<div>
  <div
    class="sc-Qotzb OMzYM"
  >
    <div
      class="rt-TabsRoot"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="rt-BaseTabList rt-TabsList rt-r-size-2"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-«rg»-content-description"
          aria-selected="true"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-«rg»-trigger-description"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Description
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Description
          </span>
        </button>
        <button
          aria-controls="radix-«rg»-content-reviews"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«rg»-trigger-reviews"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              0
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              0
            </span>
          </span>
        </button>
        <button
          aria-controls="radix-«rg»-content-questions"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«rg»-trigger-questions"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              0
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              0
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="radix-«rg»-trigger-description"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="active"
        id="radix-«rg»-content-description"
        role="tabpanel"
        style="display: flex; flex-direction: column; gap: 32px; animation-duration: 0s;"
        tabindex="0"
      >
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            Origins
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          />
        </div>
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            How to cook
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          />
        </div>
      </div>
      <div
        aria-labelledby="radix-«rg»-trigger-reviews"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«rg»-content-reviews"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-«rg»-trigger-questions"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«rg»-content-questions"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`ProductTabs Component Snapshots renders different content states correctly: without-questions 1`] = `
<div>
  <div
    class="sc-Qotzb OMzYM"
  >
    <div
      class="rt-TabsRoot"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="rt-BaseTabList rt-TabsList rt-r-size-2"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-«rc»-content-description"
          aria-selected="true"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-«rc»-trigger-description"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Description
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Description
          </span>
        </button>
        <button
          aria-controls="radix-«rc»-content-reviews"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«rc»-trigger-reviews"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              2
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              2
            </span>
          </span>
        </button>
        <button
          aria-controls="radix-«rc»-content-questions"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«rc»-trigger-questions"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              0
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              0
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="radix-«rc»-trigger-description"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="active"
        id="radix-«rc»-content-description"
        role="tabpanel"
        style="display: flex; flex-direction: column; gap: 32px; animation-duration: 0s;"
        tabindex="0"
      >
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            Origins
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          >
            Test origins content
          </p>
        </div>
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            How to cook
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          >
            Test cooking information
          </p>
        </div>
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            Full of Vitamins!
          </h3>
          <div
            style="overflow-x: auto;"
          >
            <table
              class="sc-dIMoHT dXpkLy"
            >
              <thead
                class="sc-iQQCXo LYtZC"
              >
                <tr>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    Vitamins
                  </th>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    Quantity
                  </th>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    % DV
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="sc-gDpztx ipNMIn"
                >
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    Vitamin C
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    89.2mg
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    99%
                  </td>
                </tr>
                <tr
                  class="sc-gDpztx ipNMIn"
                >
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    Vitamin K
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    102μg
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    85%
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-«rc»-trigger-reviews"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«rc»-content-reviews"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-«rc»-trigger-questions"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«rc»-content-questions"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`ProductTabs Component Snapshots renders different content states correctly: without-reviews 1`] = `
<div>
  <div
    class="sc-Qotzb OMzYM"
  >
    <div
      class="rt-TabsRoot"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="rt-BaseTabList rt-TabsList rt-r-size-2"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-«r8»-content-description"
          aria-selected="true"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-«r8»-trigger-description"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Description
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Description
          </span>
        </button>
        <button
          aria-controls="radix-«r8»-content-reviews"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«r8»-trigger-reviews"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              0
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              0
            </span>
          </span>
        </button>
        <button
          aria-controls="radix-«r8»-content-questions"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«r8»-trigger-questions"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              1
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              1
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="radix-«r8»-trigger-description"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="active"
        id="radix-«r8»-content-description"
        role="tabpanel"
        style="display: flex; flex-direction: column; gap: 32px; animation-duration: 0s;"
        tabindex="0"
      >
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            Origins
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          >
            Test origins content
          </p>
        </div>
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            How to cook
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          >
            Test cooking information
          </p>
        </div>
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            Full of Vitamins!
          </h3>
          <div
            style="overflow-x: auto;"
          >
            <table
              class="sc-dIMoHT dXpkLy"
            >
              <thead
                class="sc-iQQCXo LYtZC"
              >
                <tr>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    Vitamins
                  </th>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    Quantity
                  </th>
                  <th
                    class="sc-kpOvIu iTblYG"
                  >
                    % DV
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="sc-gDpztx ipNMIn"
                >
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    Vitamin C
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    89.2mg
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    99%
                  </td>
                </tr>
                <tr
                  class="sc-gDpztx ipNMIn"
                >
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    Vitamin K
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    102μg
                  </td>
                  <td
                    class="sc-icnseD dGkaht"
                  >
                    85%
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-«r8»-trigger-reviews"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«r8»-content-reviews"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-«r8»-trigger-questions"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«r8»-content-questions"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`ProductTabs Component Snapshots renders different content states correctly: without-vitamins 1`] = `
<div>
  <div
    class="sc-Qotzb OMzYM"
  >
    <div
      class="rt-TabsRoot"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="rt-BaseTabList rt-TabsList rt-r-size-2"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-«r4»-content-description"
          aria-selected="true"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-«r4»-trigger-description"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Description
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Description
          </span>
        </button>
        <button
          aria-controls="radix-«r4»-content-reviews"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«r4»-trigger-reviews"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              2
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Reviews 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              2
            </span>
          </span>
        </button>
        <button
          aria-controls="radix-«r4»-content-questions"
          aria-selected="false"
          class="rt-reset rt-BaseTabListTrigger rt-TabsTrigger"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-«r4»-trigger-questions"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="rt-BaseTabListTriggerInner rt-TabsTriggerInner"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              1
            </span>
          </span>
          <span
            class="rt-BaseTabListTriggerInnerHidden rt-TabsTriggerInnerHidden"
          >
            Questions 
            <span
              class="sc-fYsHOw dpDMHz"
            >
              1
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="radix-«r4»-trigger-description"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="active"
        id="radix-«r4»-content-description"
        role="tabpanel"
        style="display: flex; flex-direction: column; gap: 32px; animation-duration: 0s;"
        tabindex="0"
      >
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            Origins
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          >
            Test origins content
          </p>
        </div>
        <div>
          <h3
            class="sc-dKREkF hylWb"
          >
            How to cook
          </h3>
          <p
            class="sc-fWnslK fngUmq"
          >
            Test cooking information
          </p>
        </div>
      </div>
      <div
        aria-labelledby="radix-«r4»-trigger-reviews"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«r4»-content-reviews"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-«r4»-trigger-questions"
        class="rt-TabsContent"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-«r4»-content-questions"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
